--- a/Контакты.html
+++ b/Контакты.html
@@ -19,7 +19,7 @@
     <header class="fon">
     <div>
         <ul>
-            <li><a class="men" href="Главная.html">Главная</a></li>
+            <li><a class="men" href="index.html">Главная</a></li>
             <li><a class="men" href="О нас.html">О нас</a></li>
             <li><a class="men" href="Студенту.html">Студенту</a></li>
             <li><a class="men" href="Документы.html">Документы</a></li>
@@ -48,7 +48,7 @@
         ПН-ПТ с 9:00 до 17:00.<br>
         СБ-ВС-ВЫХОДНОЙ.</h3>
       <h1 class="zagtext2">Адрес: 109316, Россия, г. Москва,<br> Волгоградский пр-кт,<br> м. Текстильщики, д. 42, корп. 7.</h1>
-    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4243.352638498165!2d37.72216523830387!3d55.70919155867957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x30a7bbf774c23391!2z0JrQvtC70LvQtdC00LYg0KHQvtCy0YDQtdC80LXQvdC90L7Qs9C-INCj0L_RgNCw0LLQu9C10L3QuNGP!5e0!3m2!1sru!2sru!4v1591530363889!5m2!1sru!2sru" width="1450px" height="750px"  frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4243.352638498165!2d37.72216523830387!3d55.70919155867957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x30a7bbf774c23391!2z0JrQvtC70LvQtdC00LYg0KHQvtCy0YDQtdC80LXQvdC90L7Qs9C-INCj0L_RgNCw0LLQu9C10L3QuNGP!5e0!3m2!1sru!2sru!4v1591530363889!5m2!1sru!2sru" width="1000px" height="750px"  frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 
     <footer class="bot2">
         <h4 class="fotertext">Copyright© 2020
