--- a/О нас.html
+++ b/О нас.html
@@ -19,7 +19,7 @@
     <header class="fon">
     <div>
         <ul>
-            <li><a class="men" href="Главная.html">Главная</a></li>
+            <li><a class="men" href="index.html">Главная</a></li>
             <li><a class="men" href="О нас.html">О нас</a></li>
             <li><a class="men" href="Студенту.html">Студенту</a></li>
             <li><a class="men" href="Документы.html">Документы</a></li>
